--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
 
 /* clculate cart  */
 .cart {
+  width: 330px;
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
