--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,24 @@ body {
 .cart:hover {
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.7);
 }
+
+/* media query  */
+@media (max-width:576px) {
+  .cart {
+    position: relative;
+    box-shadow: none;
+    width: 100%;
+  }
+
+  .card-btn {
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width:1281px) {
+  .cart {
+    position: relative;
+    box-shadow: none;
+
+  }
+}
