--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-  font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* rating  */
@@ -28,7 +28,7 @@ body {
   height: 300px;
 }
 
-/* cart clculate */
+/* clculate cart */
 .cart {
   width: 330px;
   padding: 10px;
